# open-meteo-weather-sample-jpcity

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-distribution-to-pypi.yml  publish-distribution-to-test-pypi.yml  python-package.yml
open_meteo_weather_sample_jpcity/: __init__.py  open_meteo_forecast_api.py
tests/: test_open_meteo_forecast_api.py
